--- a/OpticalValleyUnite/Classes/UI/EquipmentRoom/ViewController/YQEquipmentDetailList.storyboard
+++ b/OpticalValleyUnite/Classes/UI/EquipmentRoom/ViewController/YQEquipmentDetailList.storyboard
@@ -81,19 +81,19 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wbY-NL-lXO">
-                                                <rect key="frame" x="0.0" y="160" width="375" height="50"/>
+                                                <rect key="frame" x="0.0" y="160" width="375" height="60"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vhR-Dn-9rb">
-                                                        <rect key="frame" x="123" y="10" width="242" height="30"/>
+                                                        <rect key="frame" x="123" y="10" width="242" height="40"/>
                                                         <subviews>
                                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Rectangle4" translatesAutoresizingMaskIntoConstraints="NO" id="Dk9-37-nCg">
-                                                                <rect key="frame" x="202" y="0.0" width="40" height="30"/>
+                                                                <rect key="frame" x="202" y="5" width="40" height="30"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="width" constant="40" id="0Vd-0x-2pV"/>
                                                                 </constraints>
                                                             </imageView>
                                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="请输入关键字" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="afe-mJ-XQ0">
-                                                                <rect key="frame" x="0.0" y="0.0" width="202" height="30"/>
+                                                                <rect key="frame" x="0.0" y="5" width="202" height="30"/>
                                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="30" id="0UC-iC-9zt"/>
@@ -103,7 +103,7 @@
                                                                 <textInputTraits key="textInputTraits"/>
                                                             </textField>
                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6mW-kW-QHs">
-                                                                <rect key="frame" x="202" y="0.0" width="40" height="30"/>
+                                                                <rect key="frame" x="202" y="0.0" width="40" height="40"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="width" constant="40" id="L2v-aZ-1wm"/>
                                                                 </constraints>
@@ -118,23 +118,23 @@
                                                             <constraint firstItem="Dk9-37-nCg" firstAttribute="leading" secondItem="afe-mJ-XQ0" secondAttribute="trailing" id="G2J-du-TLD"/>
                                                             <constraint firstAttribute="trailing" secondItem="6mW-kW-QHs" secondAttribute="trailing" id="Thw-oG-IUE"/>
                                                             <constraint firstItem="afe-mJ-XQ0" firstAttribute="centerY" secondItem="vhR-Dn-9rb" secondAttribute="centerY" id="Vs9-BH-9Xi"/>
-                                                            <constraint firstItem="Dk9-37-nCg" firstAttribute="top" secondItem="vhR-Dn-9rb" secondAttribute="top" id="Yx5-VC-E1A"/>
-                                                            <constraint firstAttribute="bottom" secondItem="Dk9-37-nCg" secondAttribute="bottom" id="fb3-eA-u93"/>
+                                                            <constraint firstItem="Dk9-37-nCg" firstAttribute="top" secondItem="vhR-Dn-9rb" secondAttribute="top" constant="5" id="Yx5-VC-E1A"/>
+                                                            <constraint firstAttribute="bottom" secondItem="Dk9-37-nCg" secondAttribute="bottom" constant="5" id="fb3-eA-u93"/>
                                                             <constraint firstAttribute="trailing" secondItem="Dk9-37-nCg" secondAttribute="trailing" id="n5s-87-6bW"/>
                                                             <constraint firstItem="6mW-kW-QHs" firstAttribute="top" secondItem="vhR-Dn-9rb" secondAttribute="top" id="tcv-LI-m2b"/>
                                                             <constraint firstItem="afe-mJ-XQ0" firstAttribute="leading" secondItem="vhR-Dn-9rb" secondAttribute="leading" id="w5I-fr-BdB"/>
                                                         </constraints>
                                                         <userDefinedRuntimeAttributes>
                                                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                                                <real key="value" value="10"/>
+                                                                <real key="value" value="6"/>
                                                             </userDefinedRuntimeAttribute>
                                                             <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
-                                                                <real key="value" value="1"/>
+                                                                <real key="value" value="0.0"/>
                                                             </userDefinedRuntimeAttribute>
                                                         </userDefinedRuntimeAttributes>
                                                     </view>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pkK-ca-Aji">
-                                                        <rect key="frame" x="5" y="7.5" width="95" height="35"/>
+                                                        <rect key="frame" x="5" y="12.5" width="95" height="35"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" constant="95" id="FFB-2s-3mk"/>
                                                             <constraint firstAttribute="height" constant="35" id="qbf-hC-bN6"/>
@@ -147,7 +147,7 @@
                                                         </connections>
                                                     </button>
                                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="caret_down" translatesAutoresizingMaskIntoConstraints="NO" id="0uu-HC-vJn">
-                                                        <rect key="frame" x="103" y="17.5" width="15" height="15"/>
+                                                        <rect key="frame" x="103" y="22.5" width="15" height="15"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="15" id="FtJ-cx-GOu"/>
                                                             <constraint firstAttribute="width" constant="15" id="X4B-wD-Nqr"/>
@@ -158,7 +158,7 @@
                                                 <constraints>
                                                     <constraint firstItem="vhR-Dn-9rb" firstAttribute="leading" secondItem="0uu-HC-vJn" secondAttribute="trailing" constant="5" id="8F8-aj-unN"/>
                                                     <constraint firstItem="pkK-ca-Aji" firstAttribute="leading" secondItem="wbY-NL-lXO" secondAttribute="leading" constant="5" id="DN2-sg-01M"/>
-                                                    <constraint firstAttribute="height" constant="50" id="Hf2-8t-B7Y"/>
+                                                    <constraint firstAttribute="height" constant="60" id="Hf2-8t-B7Y"/>
                                                     <constraint firstAttribute="trailing" secondItem="vhR-Dn-9rb" secondAttribute="trailing" constant="10" id="Jc6-6N-10h"/>
                                                     <constraint firstItem="vhR-Dn-9rb" firstAttribute="top" secondItem="wbY-NL-lXO" secondAttribute="top" constant="10" id="KGq-zz-e2P"/>
                                                     <constraint firstItem="0uu-HC-vJn" firstAttribute="centerY" secondItem="pkK-ca-Aji" secondAttribute="centerY" id="WEP-MG-kd3"/>
@@ -170,8 +170,12 @@
                                                 </constraints>
                                             </view>
                                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="xwq-w5-9JJ">
-                                                <rect key="frame" x="0.0" y="210" width="375" height="470"/>
+                                                <rect key="frame" x="0.0" y="220" width="375" height="460"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <connections>
+                                                    <outlet property="dataSource" destination="IXR-HW-Rd8" id="Pmq-It-gD6"/>
+                                                    <outlet property="delegate" destination="IXR-HW-Rd8" id="wyn-he-anv"/>
+                                                </connections>
                                             </tableView>
                                         </subviews>
                                         <constraints>
@@ -212,6 +216,7 @@
                     <connections>
                         <outlet property="headScrollView" destination="OcZ-kB-Vju" id="IvP-Xa-DqZ"/>
                         <outlet property="imageView" destination="0uu-HC-vJn" id="JeF-7s-hL0"/>
+                        <outlet property="scrollView" destination="vZI-gv-nQo" id="zZW-Km-Lhm"/>
                         <outlet property="siftView" destination="wbY-NL-lXO" id="bPQ-0V-FgD"/>
                         <outlet property="tableView" destination="xwq-w5-9JJ" id="WBI-Qn-Arl"/>
                         <outlet property="textField" destination="afe-mJ-XQ0" id="sXP-EH-2ik"/>
