--- a/OpticalValleyUnite/Classes/UI/HouseQuery/View/YQWorkListCell.xib
+++ b/OpticalValleyUnite/Classes/UI/HouseQuery/View/YQWorkListCell.xib
@@ -11,15 +11,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="WorkListCell" rowHeight="102" id="KGk-i7-Jjw" customClass="YQWorkListCell" customModule="OpticalValleyUnite" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="307" height="102"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="WorkListCell" rowHeight="140" id="KGk-i7-Jjw" customClass="YQWorkListCell" customModule="OpticalValleyUnite" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="285" height="140"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="307" height="101.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="285" height="139.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pRQ-Li-0Pd">
-                        <rect key="frame" x="0.0" y="0.0" width="307" height="35"/>
+                        <rect key="frame" x="0.0" y="0.0" width="285" height="35"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xBI-w4-qza">
                                 <rect key="frame" x="10" y="8" width="39.5" height="19.5"/>
@@ -28,7 +28,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wlx-eL-ySd">
-                                <rect key="frame" x="237" y="5" width="60" height="25"/>
+                                <rect key="frame" x="215" y="5" width="60" height="25"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="60" id="Uir-bD-Fj7"/>
                                 </constraints>
@@ -60,33 +60,36 @@
                         </constraints>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FdJ-OH-qQ7">
-                        <rect key="frame" x="0.0" y="35" width="307" height="36.5"/>
+                        <rect key="frame" x="0.0" y="35" width="285" height="74.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ktd-Xo-dl4">
-                                <rect key="frame" x="5" y="15.5" width="33" height="16"/>
+                                <rect key="frame" x="5" y="53.5" width="33" height="16"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="16" id="6mI-fd-Mew"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <color key="textColor" red="0.49803921579999999" green="0.49803921579999999" blue="0.49803921579999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="1pL-PT-Pxc">
-                                <rect key="frame" x="10" y="0.0" width="197" height="13.5"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7iV-Pe-frO">
+                                <rect key="frame" x="5" y="0.0" width="280" height="50.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" red="0.49803921579999999" green="0.49803921579999999" blue="0.49803921579999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="1pL-PT-Pxc" firstAttribute="top" secondItem="FdJ-OH-qQ7" secondAttribute="top" id="2c6-dk-9xG"/>
-                            <constraint firstItem="ktd-Xo-dl4" firstAttribute="top" secondItem="1pL-PT-Pxc" secondAttribute="bottom" constant="2" id="9GL-xg-i6L"/>
-                            <constraint firstItem="1pL-PT-Pxc" firstAttribute="leading" secondItem="FdJ-OH-qQ7" secondAttribute="leading" constant="10" id="Wvi-hx-4d3"/>
+                            <constraint firstItem="7iV-Pe-frO" firstAttribute="leading" secondItem="FdJ-OH-qQ7" secondAttribute="leading" constant="5" id="0yY-lC-h29"/>
+                            <constraint firstItem="ktd-Xo-dl4" firstAttribute="top" secondItem="7iV-Pe-frO" secondAttribute="bottom" constant="3" id="6E1-Ks-TSU"/>
                             <constraint firstItem="ktd-Xo-dl4" firstAttribute="leading" secondItem="FdJ-OH-qQ7" secondAttribute="leading" constant="5" id="Z0G-wF-wSa"/>
+                            <constraint firstItem="7iV-Pe-frO" firstAttribute="top" secondItem="FdJ-OH-qQ7" secondAttribute="top" id="ZeU-o7-Txo"/>
                             <constraint firstAttribute="bottom" secondItem="ktd-Xo-dl4" secondAttribute="bottom" constant="5" id="ksm-dW-0Z1"/>
-                            <constraint firstAttribute="trailing" secondItem="1pL-PT-Pxc" secondAttribute="trailing" constant="100" id="tbT-oB-ihf"/>
+                            <constraint firstAttribute="trailing" secondItem="7iV-Pe-frO" secondAttribute="trailing" id="v5g-eu-Ll4"/>
                         </constraints>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lD6-2i-zLR">
-                        <rect key="frame" x="0.0" y="71.5" width="307" height="30"/>
+                        <rect key="frame" x="0.0" y="109.5" width="285" height="30"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wfj-bI-bS3">
                                 <rect key="frame" x="5" y="7" width="33" height="16"/>
@@ -95,7 +98,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kvB-Iq-aaY">
-                                <rect key="frame" x="259" y="7" width="33" height="16"/>
+                                <rect key="frame" x="237" y="7" width="33" height="16"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <color key="textColor" red="0.49803921579999999" green="0.49803921579999999" blue="0.49803921579999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -128,11 +131,11 @@
                 <outlet property="nameLabel" destination="kvB-Iq-aaY" id="fHj-Pd-NhH"/>
                 <outlet property="projectLabel" destination="ktd-Xo-dl4" id="gzb-fA-udB"/>
                 <outlet property="timeLabel" destination="wfj-bI-bS3" id="gqc-Ix-6tx"/>
-                <outlet property="workDescribeTextView" destination="1pL-PT-Pxc" id="Hf2-IU-4EI"/>
+                <outlet property="workDescribeTextView" destination="7iV-Pe-frO" id="BMW-qz-GDJ"/>
                 <outlet property="workNameLabel" destination="xBI-w4-qza" id="L6Z-ap-W8M"/>
                 <outlet property="workStateButton" destination="Wlx-eL-ySd" id="gc4-Hz-s1G"/>
             </connections>
-            <point key="canvasLocation" x="-142" y="72"/>
+            <point key="canvasLocation" x="-153.5" y="91"/>
         </tableViewCell>
     </objects>
 </document>
