--- a/OpticalValleyUnite/Classes/UI/AllWorkUnitQuery/ViewController/YQAllWorkUnitHome.storyboard
+++ b/OpticalValleyUnite/Classes/UI/AllWorkUnitQuery/ViewController/YQAllWorkUnitHome.storyboard
@@ -24,7 +24,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ehf-PQ-1Vg">
                                 <rect key="frame" x="0.0" y="20" width="375" height="50"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Eyh-3E-Ovx">
+                                    <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Eyh-3E-Ovx">
                                         <rect key="frame" x="0.0" y="0.0" width="187.5" height="50"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <state key="normal" title="待处理">
@@ -50,6 +50,13 @@
                                             <action selector="selectButtonClick:" destination="eXQ-cD-Ex5" eventType="touchUpInside" id="kbi-Os-CLI"/>
                                         </connections>
                                     </button>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="E8a-Kc-99S">
+                                        <rect key="frame" x="186.5" y="5" width="1" height="40"/>
+                                        <color key="backgroundColor" red="0.098039217289999994" green="0.098039217289999994" blue="0.098039217289999994" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="1" id="nvM-Gx-1yc"/>
+                                        </constraints>
+                                    </imageView>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -58,40 +65,54 @@
                                     <constraint firstAttribute="trailing" secondItem="RfF-xA-jZC" secondAttribute="trailing" id="ARq-QJ-aDV"/>
                                     <constraint firstItem="RfF-xA-jZC" firstAttribute="top" secondItem="Ehf-PQ-1Vg" secondAttribute="top" id="MOb-iy-aBY"/>
                                     <constraint firstItem="Eyh-3E-Ovx" firstAttribute="top" secondItem="Ehf-PQ-1Vg" secondAttribute="top" id="Nh4-Fz-i5n"/>
+                                    <constraint firstItem="RfF-xA-jZC" firstAttribute="leading" secondItem="E8a-Kc-99S" secondAttribute="trailing" id="OBi-Gk-BG2"/>
                                     <constraint firstAttribute="height" constant="50" id="XJ7-f9-X9B"/>
                                     <constraint firstItem="RfF-xA-jZC" firstAttribute="leading" secondItem="Eyh-3E-Ovx" secondAttribute="trailing" id="b0f-ov-TJP"/>
                                     <constraint firstAttribute="bottom" secondItem="RfF-xA-jZC" secondAttribute="bottom" id="bJQ-Oe-cHu"/>
+                                    <constraint firstItem="E8a-Kc-99S" firstAttribute="top" secondItem="Ehf-PQ-1Vg" secondAttribute="top" constant="5" id="c4X-lY-5mQ"/>
+                                    <constraint firstAttribute="bottom" secondItem="E8a-Kc-99S" secondAttribute="bottom" constant="5" id="lX3-zh-Ghe"/>
                                     <constraint firstItem="Eyh-3E-Ovx" firstAttribute="leading" secondItem="Ehf-PQ-1Vg" secondAttribute="leading" id="qht-yy-X2j"/>
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="okR-Sj-Out">
-                                <rect key="frame" x="0.0" y="70" width="375" height="597"/>
+                                <rect key="frame" x="0.0" y="72" width="375" height="595"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <outlet property="dataSource" destination="eXQ-cD-Ex5" id="afP-7l-Ndq"/>
                                     <outlet property="delegate" destination="eXQ-cD-Ex5" id="3uk-NX-tza"/>
                                 </connections>
                             </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NV7-Z5-ypK">
+                                <rect key="frame" x="225" y="617" width="150" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="dEI-pH-oYQ"/>
+                                    <constraint firstAttribute="height" constant="50" id="yKa-ja-QlH"/>
+                                </constraints>
+                                <state key="normal" title="待处理工单总数"/>
+                            </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="okR-Sj-Out" firstAttribute="top" secondItem="Ehf-PQ-1Vg" secondAttribute="bottom" id="4Am-4I-evQ"/>
+                            <constraint firstItem="okR-Sj-Out" firstAttribute="top" secondItem="Ehf-PQ-1Vg" secondAttribute="bottom" constant="2" id="4Am-4I-evQ"/>
                             <constraint firstAttribute="trailing" secondItem="Ehf-PQ-1Vg" secondAttribute="trailing" id="8iS-JV-kzD"/>
                             <constraint firstItem="Ehf-PQ-1Vg" firstAttribute="top" secondItem="VTQ-kJ-lCW" secondAttribute="bottom" id="DsH-Pb-cmL"/>
                             <constraint firstAttribute="trailing" secondItem="okR-Sj-Out" secondAttribute="trailing" id="JzP-FI-YhS"/>
                             <constraint firstItem="okR-Sj-Out" firstAttribute="leading" secondItem="eHX-ca-M5l" secondAttribute="leading" id="NBq-wM-QnR"/>
+                            <constraint firstItem="mgR-rE-Czb" firstAttribute="top" secondItem="NV7-Z5-ypK" secondAttribute="bottom" id="Tfh-1k-gca"/>
+                            <constraint firstAttribute="trailing" secondItem="NV7-Z5-ypK" secondAttribute="trailing" id="VhQ-93-Ai3"/>
                             <constraint firstItem="Ehf-PQ-1Vg" firstAttribute="leading" secondItem="eHX-ca-M5l" secondAttribute="leading" id="lg5-wf-PUV"/>
                             <constraint firstItem="mgR-rE-Czb" firstAttribute="top" secondItem="okR-Sj-Out" secondAttribute="bottom" id="pWu-Jt-EBH"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="tableView" destination="okR-Sj-Out" id="uGJ-XY-ehm"/>
+                        <outlet property="totallBtn" destination="NV7-Z5-ypK" id="hmQ-vp-pkx"/>
                         <outlet property="waitHandleBtn" destination="Eyh-3E-Ovx" id="HFR-Zh-Znd"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IJr-XV-sJF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-383" y="-165"/>
+            <point key="canvasLocation" x="-578.39999999999998" y="-210.94452773613196"/>
         </scene>
     </scenes>
 </document>
